force-app/main/default/objects/ForwardingRequest__c/ForwardingRequest__c.object-meta.xml
<CustomObject>
    <label>回送依頼</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>回送依頼名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>