force-app/main/default/objects/ForwardingRequest__c/fields/CallA_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>CallA_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>コールA商談</label>
    <referenceTo>CallCenterA_Opportunity__c</referenceTo>
    <relationshipLabel>回送依頼</relationshipLabel>
    <relationshipName>CallA_Opportunity</relationshipName>
    <type>Lookup</type>
</CustomField>