force-app/main/default/objects/ForwardingRequest__c/fields/Cancel_Done__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Done__c</fullName>
    <defaultValue>false</defaultValue>
    <label>キャンセル処理済み</label>
    <type>Checkbox</type>
</CustomField>