force-app/main/default/objects/ForwardingRequest__c/fields/CarSize__c.field-meta.xml
<CustomField>
    <fullName>CarSize__c</fullName>
    <label>車輌サイズ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>