force-app/main/default/objects/ForwardingRequest__c/fields/Change_Cancel__c.field-meta.xml
<CustomField>
    <fullName>Change_Cancel__c</fullName>
    <description>山本</description>
    <label>依頼内容変更/依頼キャンセル</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>日程変更</fullName>
                <label>依頼内容変更</label>
            </value>
            <value>
                <fullName>回送保留</fullName>
            </value>
            <value>
                <fullName>依頼キャンセル</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>