force-app/main/default/objects/ForwardingRequest__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <description>ソコリテ判断で使用するために買取商談の売契取付項目を参照する。山本</description>
    <formula>TEXT( Opportunity__r.Contract_OK__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>売買契約書</label>
    <type>Text</type>
</CustomField>