force-app/main/default/objects/ForwardingRequest__c/fields/Deadline__c.field-meta.xml
<CustomField>
    <fullName>Deadline__c</fullName>
    <description>山本</description>
    <label>他社AA会場搬出期限</label>
    <type>Date</type>
</CustomField>