force-app/main/default/objects/ForwardingRequest__c/fields/DeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>DeliveryDate__c</fullName>
    <description>作成：山本</description>
    <label>納車日</label>
    <type>Date</type>
</CustomField>