force-app/main/default/objects/ForwardingRequest__c/fields/Departure__c.field-meta.xml
<CustomField>
    <fullName>Departure__c</fullName>
    <label>使用不可_出発地</label>
    <length>50</length>
    <type>Text</type>
</CustomField>