force-app/main/default/objects/ForwardingRequest__c/fields/Desired_time__c.field-meta.xml
<CustomField>
    <fullName>Desired_time__c</fullName>
    <description>山本</description>
    <label>搬出希望時間</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AM</fullName>
            </value>
            <value>
                <fullName>PM</fullName>
            </value>
            <value>
                <fullName>無し</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>