force-app/main/default/objects/ForwardingRequest__c/fields/Destination__c.field-meta.xml
<CustomField>
    <fullName>Destination__c</fullName>
    <label>使用不可_目的地</label>
    <length>50</length>
    <type>Text</type>
</CustomField>