force-app/main/default/objects/ForwardingRequest__c/fields/Destination_Regular_holiday__c.field-meta.xml
<CustomField>
    <fullName>Destination_Regular_holiday__c</fullName>
    <description>山本</description>
    <label>搬入先の定休日</label>
    <length>10</length>
    <type>Text</type>
</CustomField>