force-app/main/default/objects/ForwardingRequest__c/fields/DocMgmt_Phase__c.field-meta.xml
<CustomField>
    <fullName>DocMgmt_Phase__c</fullName>
    <description>山本</description>
    <formula>TEXT( Opportunity__r.DocMgmt_Phase__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>中販名変フェーズ</label>
    <type>Text</type>
</CustomField>