force-app/main/default/objects/ForwardingRequest__c/fields/Exhibition_number__c.field-meta.xml
<CustomField>
    <fullName>Exhibition_number__c</fullName>
    <description>山本</description>
    <label>他社AA出品番号</label>
    <length>10</length>
    <type>Text</type>
</CustomField>