force-app/main/default/objects/ForwardingRequest__c/fields/Forwarding_staff__c.field-meta.xml
<CustomField>
    <fullName>Forwarding_staff__c</fullName>
    <label>回送担当</label>
    <length>50</length>
    <type>Text</type>
</CustomField>