force-app/main/default/objects/ForwardingRequest__c/fields/ForwardingScheduledDate__c.field-meta.xml
<CustomField>
    <fullName>ForwardingScheduledDate__c</fullName>
    <label>引取日</label>
    <type>Date</type>
</CustomField>