force-app/main/default/objects/ForwardingRequest__c/fields/Forwardingteam_memo__c.field-meta.xml
<CustomField>
    <fullName>Forwardingteam_memo__c</fullName>
    <description>山本</description>
    <label>回送チームメモ</label>
    <type>TextArea</type>
</CustomField>