force-app/main/default/objects/ForwardingRequest__c/fields/GroundClearance__c.field-meta.xml
<CustomField>
    <fullName>GroundClearance__c</fullName>
    <description>山本</description>
    <label>最低地上高</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>問題なし</fullName>
            </value>
            <value>
                <fullName>11～15cm</fullName>
            </value>
            <value>
                <fullName>6～10cm</fullName>
            </value>
            <value>
                <fullName>0～5cm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>