force-app/main/default/objects/ForwardingRequest__c/fields/JBOY__c.field-meta.xml
<CustomField>
    <fullName>JBOY__c</fullName>
    <formula>Opportunity__r.JBOY__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ジェイボーイ出品</label>
    <type>Checkbox</type>
</CustomField>