force-app/main/default/objects/ForwardingRequest__c/fields/LotNo__c.field-meta.xml
<CustomField>
    <fullName>LotNo__c</fullName>
    <externalId>true</externalId>
    <label>ロット番号</label>
    <length>20</length>
    <type>Text</type>
</CustomField>