force-app/main/default/objects/ForwardingRequest__c/fields/ModelYearCarName__c.field-meta.xml
<CustomField>
    <fullName>ModelYearCarName__c</fullName>
    <description>佐野
年式(和暦)・車種</description>
    <formula>IF( OR( ISNULL( Mst_Models_formula__c ) , ISNULL( ModelYearPickList__c )) , ModelYearPickList__c &amp; Mst_Models_formula__c ,
ModelYearPickList__c &amp; &quot;・&quot; &amp; Mst_Models_formula__c)</formula>
    <label>年式・車種</label>
    <type>Text</type>
</CustomField>