force-app/main/default/objects/ForwardingRequest__c/fields/ModelYearPickList__c.field-meta.xml
<CustomField>
    <fullName>ModelYearPickList__c</fullName>
    <description>佐野
年式・車種　反映用</description>
    <formula>IF( ISBLANK( Opportunity__c), Case__r.ModelYear_Japanese__c , Opportunity__r.ModelYear_Japanese__c )</formula>
    <label>年式</label>
    <type>Text</type>
</CustomField>