force-app/main/default/objects/ForwardingRequest__c/fields/OBIC_ordernum__c.field-meta.xml
<CustomField>
    <fullName>OBIC_ordernum__c</fullName>
    <description>山本</description>
    <label>OBIC受注番号</label>
    <length>12</length>
    <type>Text</type>
</CustomField>