force-app/main/default/objects/ForwardingRequest__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>買取商談</label>
    <referenceTo>PurchaseOpportunity__c</referenceTo>
    <relationshipLabel>回送依頼</relationshipLabel>
    <relationshipName>Opportunity_Forwarding</relationshipName>
    <type>Lookup</type>
</CustomField>