force-app/main/default/objects/ForwardingRequest__c/fields/Order_inputted__c.field-meta.xml
<CustomField>
    <fullName>Order_inputted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>オーダー作成済み</label>
    <type>Checkbox</type>
</CustomField>