force-app/main/default/objects/ForwardingRequest__c/fields/OtherAA_List__c.field-meta.xml
<CustomField>
    <fullName>OtherAA_List__c</fullName>
    <label>リスト有無</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>無し</fullName>
            </value>
            <value>
                <fullName>有り</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>