force-app/main/default/objects/ForwardingRequest__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <formula>Owner:User.LastName &amp; &quot; &quot; &amp; Owner:User.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>所有者</label>
    <type>Text</type>
</CustomField>