force-app/main/default/objects/ForwardingRequest__c/fields/PlaceOfDeparture__c.field-meta.xml
<CustomField>
    <fullName>PlaceOfDeparture__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>山本</description>
    <label>出発地</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Mst_Yard__c.Name</field>
            <operation>notContain</operation>
            <value>使用禁止_</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Mst_Yard__c</referenceTo>
    <relationshipLabel>出発地</relationshipLabel>
    <relationshipName>Forwarding_Departure</relationshipName>
    <type>Lookup</type>
</CustomField>