force-app/main/default/objects/ForwardingRequest__c/fields/PlaceOfDestination__c.field-meta.xml
<CustomField>
    <fullName>PlaceOfDestination__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>山本</description>
    <label>目的地</label>
    <referenceTo>Mst_Yard__c</referenceTo>
    <relationshipLabel>目的地</relationshipLabel>
    <relationshipName>Forwarding_Destination</relationshipName>
    <type>Lookup</type>
</CustomField>