force-app/main/default/objects/ForwardingRequest__c/fields/PurchaseDate__c.field-meta.xml
<CustomField>
    <fullName>PurchaseDate__c</fullName>
    <description>山本</description>
    <formula>IF( NOT( ISBLANK( Opportunity__c)), Opportunity__r.PurchaseDate__c ,
IF( NOT( ISBLANK( Case__c )), Case__r.PurchaseDate__c ,null))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>買取日</label>
    <type>Date</type>
</CustomField>