force-app/main/default/objects/ForwardingRequest__c/fields/RepairCar__c.field-meta.xml
<CustomField>
    <fullName>RepairCar__c</fullName>
    <formula>Opportunity__r.RepairCar__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>修理車両</label>
    <type>Checkbox</type>
</CustomField>