force-app/main/default/objects/ForwardingRequest__c/fields/Retail_Flag__c.field-meta.xml
<CustomField>
    <fullName>Retail_Flag__c</fullName>
    <formula>IF( ISPICKVAL( Opportunity__r.Retail_Flag__c  , &quot;する&quot;),true,false)</formula>
    <label>小売りフラグ</label>
    <type>Checkbox</type>
</CustomField>