force-app/main/default/objects/ForwardingRequest__c/fields/Sales_Comments__c.field-meta.xml
<CustomField>
    <fullName>Sales_Comments__c</fullName>
    <label>営業コメント</label>
    <type>TextArea</type>
</CustomField>