force-app/main/default/objects/ForwardingRequest__c/fields/Shipment_address_after_name_change__c.field-meta.xml
<CustomField>
    <fullName>Shipment_address_after_name_change__c</fullName>
    <description>山本</description>
    <formula>Opportunity__r.Shipment_address_after_name_change__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>中販名変後ナンバー発送先</label>
    <type>Text</type>
</CustomField>