force-app/main/default/objects/ForwardingRequest__c/fields/Specific_bidder__c.field-meta.xml
<CustomField>
    <fullName>Specific_bidder__c</fullName>
    <description>喜多</description>
    <label>特定落札業者</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SBT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>