force-app/main/default/objects/ForwardingRequest__c/listViews/Done.listView-meta.xml
<ListView>
    <fullName>Done</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Owner__c</columns>
    <columns>ForwardingRequestDate__c</columns>
    <columns>Departure__c</columns>
    <columns>Destination__c</columns>
    <columns>Forwarding_staff__c</columns>
    <columns>Order_inputted__c</columns>
    <columns>ForwardingScheduledDate__c</columns>
    <columns>DeliveryDate__c</columns>
    <columns>ForwardingCompany__c</columns>
    <columns>Mst_Models_formula__c</columns>
    <columns>CarNo__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ForwardingScheduledDate__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Owner__c</field>
        <operation>notEqual</operation>
        <value>中川 祐里,山本 沙耶</value>
    </filters>
    <label>段取り済みリスト</label>
</ListView>