force-app/main/default/objects/ForwardingRequest__c/listViews/Not_created_order.listView-meta.xml
<ListView>
    <fullName>Not_created_order</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Owner__c</columns>
    <columns>ForwardingRequestDate__c</columns>
    <columns>PlaceOfDeparture__c</columns>
    <columns>PlaceOfDestination__c</columns>
    <columns>Forwarding_staff__c</columns>
    <columns>Order_inputted__c</columns>
    <columns>OBIC_ordernum__c</columns>
    <columns>ModelYearPickList__c</columns>
    <columns>Mst_Models_formula__c</columns>
    <columns>CarNo__c</columns>
    <columns>Forwardingteam_memo__c</columns>
    <columns>Change_Cancel__c</columns>
    <columns>VehicleCondition__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ForwardingScheduledDate__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Cancel_Done__c</field>
        <operation>notEqual</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Sales_Comments__c</field>
        <operation>notContain</operation>
        <value>テスト</value>
    </filters>
    <filters>
        <field>OBIC_ordernum__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Order_inputted__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>オーダー未作成リスト</label>
</ListView>