force-app/main/default/objects/ForwardingRequest__c/listViews/NotDone_Nishioka.listView-meta.xml
<ListView>
    <fullName>NotDone_Nishioka</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Case__c</columns>
    <columns>Owner__c</columns>
    <columns>ForwardingRequestDate__c</columns>
    <columns>Departure__c</columns>
    <columns>Destination__c</columns>
    <columns>Forwarding_staff__c</columns>
    <columns>Order_inputted__c</columns>
    <columns>ForwardingScheduledDate__c</columns>
    <columns>DeliveryDate__c</columns>
    <columns>CarName__c</columns>
    <columns>CarNo__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ForwardingScheduledDate__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Forwarding_staff__c</field>
        <operation>contains</operation>
        <value>西岡</value>
    </filters>
    <filters>
        <field>Owner__c</field>
        <operation>notEqual</operation>
        <value>中川 祐里,山本 沙耶</value>
    </filters>
    <label>段取りマチリスト（西岡）</label>
</ListView>